# wise-prompt

./: .dockerignore  .env  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .secrets.baseline  .triage-policies.yml  Dockerfile  LICENSE  README.md  dev.Dockerfile  gunicorn.Dockerfile  gunicorn.conf.py  pyproject.toml
.gitlab/: Dangerfile  helpers.rb
.gitlab/ci/: Build-and-Push-App.gitlab-ci.yml  Container-Scanning.gitlab-ci.yml  Dependency-Management.gitlab-ci.yml  Lint.gitlab-ci.yml  Mkdocs.gitlab-ci.yml  Openapi-Docs.gitlab-ci.yml  Openapi.gitlab-ci.yml  Secret-Detection.gitlab-ci.yml  Test.gitlab-ci.yml
.gitlab/issue_templates/: Bug.md  Default.md  Documentation.md  Feature.md  Hotfix.md  Refactoring.md
.gitlab/triage/: assignee.rb
app/: config.py  constants.py  dependencies.py  handlers.py  log.py  main.py  models.py  version.py
app/api/: api_router.py
app/api/examples/: __init__.py  ape.py  prompt.py
app/api/routers/: ape.py  prompt.py
app/docs/: ape.py  main.py  prompt.py
app/exceptions/: base.py  service.py
app/routers/: ape.py  prompt.py
app/schemas/: ape.py  models.py  prompt.py  response.py
app/src/: ollama.py
app/src/ape/: ape.py  config.py  data.py  evaluate.py  generate.py  llm.py
app/src/ape/config/: template.py
app/src/ape/configs/: bandits.yaml  default.yaml
app/src/ape/evaluation/: bandits.py  likelihood.py
app/src/exception/: exceptions.py  service.py
app/src/llm_provider/: llm_tool.py
app/src/prompt/: auto_cot.py  cot.py  deafult.py  default.py  react.py  self_consistency.py
app/utils/: authentication.py
docs/: Dockerfile  mkdocs.yml  requirements.txt
docs/docs/: index.md
docs/docs/api/: docs.html
docs/docs/guide/: docker.md  gunicorn.md  pre-commit.md  secret-detection.md
docs/docs/start/: getting-started.md  quick-start.md
static/: redoc.standalone.js  swagger-ui-bundle.js
tests/: conftest.py  test_main.py
tests/internal/: test_admin.py
tests/routers/: test_items.py  test_prompt.py  test_users.py
tests/src/prompt/: test_react.py
