[build-system]
requires = [
    "pip >= 23.1",
    "setuptools >= 67.6.1",
    "wheel >= 0.40.0"
]
build-backend = "setuptools.build_meta"


[tool.poetry]
name = "wise-prompt"
version = "v1"
authors = [
    "Seoyeon Park <sally9476@wisenut.co.kr>"
]
maintainers = [
    "Seoyeon Park <sally9476@wisenut.co.kr>"
]
description = "AIP Team Wise Prompt Engineering API"
readme = "README.md"
keywords = ["python", "fastapi", "prompt engineering", "prompt", "prompting"]
license = "LICENSE"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Framework :: FastAPI",
    "Natural Language :: Korean",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet :: WWW/HTTP",
    "Intended Audience :: Developers"
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
fastapi = { extras = ["standard"], version = "^0.115.5" }
loguru = "^0.7.2"
pydantic = "^2.7.0"
pyyaml = "^6.0.2"
langchain-ollama = "^0.1.0"
langchain = "^0.2.11"
langchain-community = "^0.2.10"
openai = "^1.56.0"
langchain-openai = "^0.1.17"
langchainhub = "^0.1.20"
langchain-huggingface = "^0.0.3"
wikipedia = "^1.4.0"
numexpr = "^2.10.2"
duckduckgo-search = "^6.3.7"
pydantic-settings = "^2.6.1"
uvicorn = "^0.32.1"


[tool.poetry.group.lint.dependencies]
ruff = "^0.8.1"
mypy = "^1.11.1"
pyright = "^1.1.389"

[tool.poetry.group.test.dependencies]
httpx = "^0.27.0"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
tabulate = "^0.9.0"

[tool.poetry.group.gunicorn.dependencies]
gunicorn = "^23.0.0"

[tool.setuptools]
py-modules = ["app"]


[tool.ruff]
line-length = 125
exclude = [
    '.git',
    '__pycache__',
    '.ruff_cache',
    'docs',
    'venv',
    'tests',
    'build',
    'dist',
    './app/__init__.py',
    'gunicorn.conf.py'
]
target-version = "py39"
[tool.ruff.lint]
select = ["D"]
ignore = ['W', "D100", "D104", "D105", "D414", "D415", "D417", "D107"]
[tool.ruff.lint.pydocstyle]
convention = "google"
[tool.ruff.lint.extend-per-file-ignores]
# app/src 디렉토리에서만 `D` 규칙 적용, <https://docs.astral.sh/ruff/rules/#pydocstyle-d>
"app/api/*" = ["D"]
"app/exceptions/*" = ["D"]
"app/schemas/*" = ["D"]
"app/utils/*" = ["D"]
"app/version.py" = ["D"]
"app/main.py" = ["D"]
"app/log.py" = ["D"]
"app/handlers.py" = ["D"]
"app/dependencies.py" = ["D"]
"app/constants.py" = ["D"]
"app/config.py" = ["D"]
[tool.ruff.lint.mccabe]
max-complexity = 10


[tool.pyright]
pythonVersion = "3.9"
defineConstant = { DEBUG = true }
reportMissingImports = false
reportMissingTypeStubs = false
reportArgumentType = false
typeCheckingMode = "basic"
include = ["app"]
exclude = [
    '.git',
    '__pycache__',
    '.ruff_cache',
    '.pytest_cache',
    'docs',
    'venv',
    'tests',
    'build',
    'dist',
    'pypi',
    'logs',
    'gunicorn.conf.py'
]

[tool.coverage.run]
source = ["app"]
omit = [
    "app/*.py",
    "*/__init__.py",
    "app/api/examples/*.py",
    "app/exceptions/*.py",
]